[gd_scene load_steps=3 format=3 uid="uid://end_screen_scene"]

[ext_resource type="Script" path="res://scripts/EndScreen.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/start/image.png" id="2_image"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="StartImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_image")
expand_mode = 1
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="ResultLabel" type="Label" parent="Overlay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Distance: 0 m
Coins: 0
Final AQI: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="Overlay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -100.0
offset_right = 80.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 2
text = "PLAY AGAIN"

[connection signal="pressed" from="Overlay/RestartButton" to="." method="_on_restart_button_pressed"]
